# MIE1077-Delivery-Robot

./: LICENSE.txt  README.md  restaurant.world
RestaurantModel/: model.config  model.sdf
RestaurantModel/meshes/: Burgerking.mtl
input_module/: CMakeLists.txt  package.xml  setup.cfg  setup.py
input_module/input_module/: __init__.py  input_module_node.py
input_module/launch/: input_module.launch.py
motion_preparation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
motion_preparation/launch/: motion_preparation.launch.py
motion_preparation/motion_preparation/: __init__.py  grasp_attacher_node.py  gui_node.py  recorder_node.py  teleop_node.py
navigation_module/: CMakeLists.txt  package.xml  setup.cfg  setup.py
navigation_module/launch/: navigation.launch.py
navigation_module/navigation_module/: __init__.py  navigation_node.py
