<?xml version="1.0"?>
<package format="3">
  <name>input_module</name>
  <version>0.0.1</version>
  <description>The Input Module for Tiago robot, providing camera input processing and GUI.</description>
  <maintainer email="rev.liu@mail.utoronto.ca">RUIWU LIU</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <!-- PyQt5 and other non-ROS dependencies like openai, ultralytics might need to be pre-installed. -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
