[metadata]
name = input_module
version = 0.0.1
description = Input Module for Tiago robot: camera, YOLO detection, GUI, LLM integration.
long_description = file: README.md
author = Your Name
author_email = your.email@example.com
license = Apache-2.0
keywords = ros2, tiago, camera, yolo, gui, openai, snapshot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    rclpy
    sensor_msgs
    std_msgs
    geometry_msgs
    cv_bridge
    ultralytics
    openai
    PyQt5
    opencv-python
zip_safe = true

[options.entry_points]
console_scripts =
    input_module_node = input_module.input_module_node:main

[options.packages.find]
exclude =
    test

[develop]
script_dir=$base/lib/input_module

[install]
install_scripts=$base/lib/input_module

