<?xml version="1.0"?>
<package format="3">
  <name>motion_preparation</name>
  <version>0.1.0</version>
  <description>Keyboard teleop, GUI and recorder for TIAGo motion data collection</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>moveit_servo</depend>
  <depend>PyQt5</depend>

  <exec_depend>python3-pyqt5</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
