[develop]
script_dir=$base/lib/motion_preparation

[install]
install_scripts=$base/lib/motion_preparation

[metadata]
name = motion_preparation
version = 0.1.0
description = Keyboard teleop, GUI and recorder for TIAGo motion data collection
author = Your Name
author_email = you@example.com
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
    sensor_msgs
    trajectory_msgs
    control_msgs
    geometry_msgs
    tf2_ros
    moveit_servo
    PyQt5
zip_safe = true

[options.entry_points]
console_scripts =
    teleop_node = motion_preparation.teleop_node:main
    recorder_node = motion_preparation.recorder_node:main
    gui_node = motion_preparation.gui_node:main
    grasp_attacher_node = motion_preparation.grasp_attacher_node:main
