cmake_minimum_required(VERSION 3.5)project(navigation_module)# 查找 ament CMake 与 ROS 2 Python 客户端库find_package(ament_cmake REQUIRED)find_package(rclpy REQUIRED)find_package(std_msgs REQUIRED)find_package(sensor_msgs REQUIRED)find_package(geometry_msgs REQUIRED)find_package(nav2_msgs REQUIRED)# 安装 Python 包ament_python_install_package(${PROJECT_NAME})# 安装 launch 文件install(  DIRECTORY launch  DESTINATION share/${PROJECT_NAME}/launch)# 完成注册与安装ament_package()