<?xml version="1.0"?><package format="3">  <!-- 包名 -->  <name>navigation_module</name>  <!-- 版本号 -->  <version>0.0.1</version>  <!-- 简要描述 -->  <description>ROS 2 navigation module integrating Nav2, obstacle avoidance, and feedback for TIAGo.</description>  <!-- 维护者信息 -->  <maintainer email="rev.liu@mail.utornto.ca">RUIWU LIU</maintainer>  <!-- 许可证 -->  <license>Apache-2.0</license>  <!-- 指定 Python 构建工具 -->  <buildtool_depend>ament_python</buildtool_depend>  <!-- 运行时依赖 -->  <exec_depend>rclpy</exec_depend>  <exec_depend>std_msgs</exec_depend>  <exec_depend>sensor_msgs</exec_depend>  <exec_depend>geometry_msgs</exec_depend>  <exec_depend>nav2_msgs</exec_depend>  <exec_depend>tf_transformations</exec_depend>  <!-- 静态代码检查（可选） -->  <test_depend>ament_lint_auto</test_depend>  <test_depend>ament_lint_common</test_depend>  <!-- 导出构建类型 -->  <export>    <build_type>ament_python</build_type>  </export></package>