[develop]
script_dir=$base/lib/navigation_module
[install]
install_scripts=$base/lib/navigation_module
[metadata]
name = navigation_module
version = 0.0.1
description = ROS 2 navigation module integrating Nav2, obstacle avoidance, and feedback for TIAGo
long_description = file: README.md
long_description_content_type = text/markdown
author = RUIWU LIU
author_email = rev.liu@mail.utoronto.ca
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
    sensor_msgs
    geometry_msgs
    nav2_msgs
    tf_transformations

[options.entry_points]
console_scripts =
    navigation_node = navigation_module.navigation_node:main

